core/codegen/tests/ui-fail-nightly/typed-uri-bad-type.stderr
error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::Path, &str>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:42:23
   |
42 |     uri!(simple: id = "hi");
   |                       ^^^^ the trait `FromUriParam<rocket::http::uri::Path, &str>` is not implemented for `usize`
   |
   = help: the following implementations were found:
             <usize as FromUriParam<P, &'x mut usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, usize>>
   = note: required by `from_uri_param`

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::Path, &str>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:44:18
   |
44 |     uri!(simple: "hello");
   |                  ^^^^^^^ the trait `FromUriParam<rocket::http::uri::Path, &str>` is not implemented for `usize`
   |
   = help: the following implementations were found:
             <usize as FromUriParam<P, &'x mut usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, usize>>
   = note: required by `from_uri_param`

error[E0277]: the trait bound `usize: FromUriParam<rocket::http::uri::Path, i64>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:46:23
   |
46 |     uri!(simple: id = 239239i64);
   |                       ^^^^^^^^^ the trait `FromUriParam<rocket::http::uri::Path, i64>` is not implemented for `usize`
   |
   = help: the following implementations were found:
             <usize as FromUriParam<P, &'x mut usize>>
             <usize as FromUriParam<P, &'x usize>>
             <usize as FromUriParam<P, usize>>
   = note: required by `from_uri_param`

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::Path, _>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:48:31
   |
48 |     uri!(not_uri_display: 10, S);
   |                               ^ the trait `FromUriParam<rocket::http::uri::Path, _>` is not implemented for `S`
   |
   = note: required by `from_uri_param`

error[E0277]: the trait bound `i32: FromUriParam<rocket::http::uri::Path, std::option::Option<{integer}>>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:53:26
   |
53 |     uri!(optionals: id = Some(10), name = Ok("bob".into()));
   |                          ^^^^^^^^ the trait `FromUriParam<rocket::http::uri::Path, std::option::Option<{integer}>>` is not implemented for `i32`
   |
   = help: the following implementations were found:
             <i32 as FromUriParam<P, &'x i32>>
             <i32 as FromUriParam<P, &'x mut i32>>
             <i32 as FromUriParam<P, i32>>
   = note: required because of the requirements on the impl of `FromUriParam<rocket::http::uri::Path, std::option::Option<{integer}>>` for `std::option::Option<i32>`
   = note: required by `from_uri_param`

error[E0277]: the trait bound `std::string::String: FromUriParam<rocket::http::uri::Path, Result<_, _>>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:53:43
   |
53 |     uri!(optionals: id = Some(10), name = Ok("bob".into()));
   |                                           ^^^^^^^^^^^^^^^^ the trait `FromUriParam<rocket::http::uri::Path, Result<_, _>>` is not implemented for `std::string::String`
   |
   = help: the following implementations were found:
             <std::string::String as FromUriParam<P, &'a str>>
             <std::string::String as FromUriParam<P, &'x &'a str>>
             <std::string::String as FromUriParam<P, &'x mut &'a str>>
             <std::string::String as FromUriParam<P, &'x mut std::string::String>>
           and 2 others
   = note: required because of the requirements on the impl of `FromUriParam<rocket::http::uri::Path, Result<_, _>>` for `Result<std::string::String, &RawStr>`
   = note: required by `from_uri_param`

error[E0277]: the trait bound `isize: FromUriParam<rocket::http::uri::Query, &str>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:55:20
   |
55 |     uri!(simple_q: "hi");
   |                    ^^^^ the trait `FromUriParam<rocket::http::uri::Query, &str>` is not implemented for `isize`
   |
   = help: the following implementations were found:
             <isize as FromUriParam<P, &'x isize>>
             <isize as FromUriParam<P, &'x mut isize>>
             <isize as FromUriParam<P, isize>>
   = note: required by `from_uri_param`

error[E0277]: the trait bound `isize: FromUriParam<rocket::http::uri::Query, &str>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:57:25
   |
57 |     uri!(simple_q: id = "hi");
   |                         ^^^^ the trait `FromUriParam<rocket::http::uri::Query, &str>` is not implemented for `isize`
   |
   = help: the following implementations were found:
             <isize as FromUriParam<P, &'x isize>>
             <isize as FromUriParam<P, &'x mut isize>>
             <isize as FromUriParam<P, isize>>
   = note: required by `from_uri_param`

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::Query, _>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:59:24
   |
59 |     uri!(other_q: 100, S);
   |                        ^ the trait `FromUriParam<rocket::http::uri::Query, _>` is not implemented for `S`
   |
   = note: required by `from_uri_param`

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::Query, _>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:61:26
   |
61 |     uri!(other_q: rest = S, id = 100);
   |                          ^ the trait `FromUriParam<rocket::http::uri::Query, _>` is not implemented for `S`
   |
   = note: required by `from_uri_param`

error[E0277]: the trait bound `S: Ignorable<rocket::http::uri::Query>` is not satisfied
   --> $DIR/typed-uri-bad-type.rs:36:29
    |
36  | fn other_q(id: usize, rest: S) {  }
    |                             ^ the trait `Ignorable<rocket::http::uri::Query>` is not implemented for `S`
...
63  |     uri!(other_q: rest = _, id = 100);
    |     ---------------------------------- in this macro invocation
    |
   ::: $WORKSPACE/core/http/src/uri/uri_display.rs
    |
    | pub fn assert_ignorable<P: UriPart, T: Ignorable<P>>() {  }
    |                                        ------------ required by this bound in `assert_ignorable`
    |
    = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: Ignorable<rocket::http::uri::Query>` is not satisfied
   --> $DIR/typed-uri-bad-type.rs:36:16
    |
36  | fn other_q(id: usize, rest: S) {  }
    |                ^^^^^ the trait `Ignorable<rocket::http::uri::Query>` is not implemented for `usize`
...
65  |     uri!(other_q: rest = S, id = _);
    |     -------------------------------- in this macro invocation
    |
   ::: $WORKSPACE/core/http/src/uri/uri_display.rs
    |
    | pub fn assert_ignorable<P: UriPart, T: Ignorable<P>>() {  }
    |                                        ------------ required by this bound in `assert_ignorable`
    |
    = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `S: FromUriParam<rocket::http::uri::Query, _>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:65:26
   |
65 |     uri!(other_q: rest = S, id = _);
   |                          ^ the trait `FromUriParam<rocket::http::uri::Query, _>` is not implemented for `S`
   |
   = note: required by `from_uri_param`

error[E0277]: the trait bound `std::option::Option<i32>: FromUriParam<rocket::http::uri::Query, {integer}>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:69:28
   |
69 |     uri!(optionals_q: id = 10, name = "Bob".to_string());
   |                            ^^ the trait `FromUriParam<rocket::http::uri::Query, {integer}>` is not implemented for `std::option::Option<i32>`
   |
   = help: the following implementations were found:
             <std::option::Option<T> as FromUriParam<rocket::http::uri::Path, A>>
             <std::option::Option<T> as FromUriParam<rocket::http::uri::Query, Result<A, E>>>
             <std::option::Option<T> as FromUriParam<rocket::http::uri::Query, std::option::Option<A>>>
   = note: required by `from_uri_param`

error[E0277]: the trait bound `Result<std::string::String, &RawStr>: FromUriParam<rocket::http::uri::Query, std::string::String>` is not satisfied
  --> $DIR/typed-uri-bad-type.rs:69:39
   |
69 |     uri!(optionals_q: id = 10, name = "Bob".to_string());
   |                                       ^^^^^^^^^^^^^^^^^ the trait `FromUriParam<rocket::http::uri::Query, std::string::String>` is not implemented for `Result<std::string::String, &RawStr>`
   |
   = help: the following implementations were found:
             <Result<T, E> as FromUriParam<rocket::http::uri::Path, A>>
             <Result<T, E> as FromUriParam<rocket::http::uri::Query, Result<A, E>>>
             <Result<T, E> as FromUriParam<rocket::http::uri::Query, std::option::Option<A>>>
   = note: required by `from_uri_param`
